--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="utf-8"/>
@@ -12,17 +12,31 @@
   <meta name="format-detection" content="telephone=no"/>
   <meta name="msapplication-tap-highlight" content="no"/>
 
-  <link rel="icon" type="image/png" href="assets/icon/favicon.png"/>
-
-  <!-- add to homescreen for ios -->
+  <!-- PWA Configuration -->
+  <meta name="theme-color" content="#3880ff"/>
+  <meta name="background-color" content="#ffffff"/>
+  <meta name="apple-mobile-web-app-capable" content="yes"/>
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"/>
+  <meta name="apple-mobile-web-app-title" content="Peón Ladino"/>
   <meta name="mobile-web-app-capable" content="yes"/>
-  <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
-  <link rel="manifest" href="manifest.webmanifest">
+  <meta name="application-name" content="Peón Ladino"/>
+  <meta name="msapplication-TileColor" content="#3880ff"/>
+  <meta name="msapplication-tap-highlight" content="no"/>
+
+  <!-- Icons -->
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/icon/favicon.png"/>
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/icon/favicon.png"/>
+  <link rel="apple-touch-icon" sizes="180x180" href="icons/icon-192x192.png"/>
+  <link rel="icon" type="image/png" sizes="192x192" href="icons/icon-192x192.png"/>
+  <link rel="icon" type="image/png" sizes="512x512" href="icons/icon-512x512.png"/>
+  
+  <!-- Manifest -->
+  <link rel="manifest" href="/manifest.webmanifest">
 </head>
 
 <body>
   <app-root></app-root>
-  <noscript>Please enable JavaScript to continue using this application.</noscript>
+  <noscript>Por favor habilita JavaScript para continuar usando esta aplicación.</noscript>
 </body>
 
 </html>
